# pid-autotuning

./: .gitignore  README.md
Simulation/: AutotuningPID_RNNTraining.ipynb  AutotuningPID_Simulator.ipynb  Model_OmniWheel.ipynb  README.md
Simulation/python/: at_single_tst.py  autotuning.py  dse_motor_cts.py  dse_pid.py  functions.py  movements.py  rand_robots_movement.py  sim_pid.py
Simulation/rnn/: functions.py  inference.py  training.py
pid-autotuning-firmware/: 3wheel_model_lstm_128_tanh_experimental_1812.h5  3wheel_model_lstm_64_tanh_experimental_1812.h5  CMakeLists.txt  README.md  SERVER_README.md  TELEMETRY_UPDATE.md  TRAJECTORY_ANALYSIS.md  analyze_telemetry.py  data_logger_server.py  motor_ident_server.py  python_server.py  requirements.txt  sdkconfig  setup_servers.sh  test_analyze_trajectory.py  test_motor_ident.py  test_telemetry_struct.py  view_motor_ident.py
pid-autotuning-firmware/00_classical_results/: autotuning_20260114_174810_before_Kp[2.4658, 2.6909, 2.8562]_Ki[0.0019, 0.0033, 0.0023]_Kd[0.0019, 0.0021, 0.0034].csv  autotuning_20260114_174810_before_Kp[2.4658, 2.6909, 2.8562]_Ki[0.0019, 0.0033, 0.0023]_Kd[0.0019, 0.0021, 0.0034]_meta.json  autotuning_20260114_175524_before_Kp[2.4658, 2.6909, 2.8562]_Ki[0.0019, 0.0033, 0.0023]_Kd[0.0019, 0.0021, 0.0034].csv  (+1 more)
pid-autotuning-firmware/main/: CMakeLists.txt  communication.c  control_main.c  firmware_main.c  mov_calculation.c  telemetry.c
pid-autotuning-firmware/main/include/: control_main.h  mov_calculation.h  telemetry.h
pid-autotuning-firmware/models/: lstm128tanh_64relu_exp_1401.h5
(+77 files in other folders)
