file(GLOB SRCS_AS5600  "../sensors/AS5600_HAL_Library/*.c")

file(GLOB SRCS_PLATFORM  "../platform/*.c")
file(GLOB SRCS_BLDC_PWM  "../drivers/bldc_pwm/*.c")
file(GLOB SRCS_PID_LIB  "../drivers/pid_lib/*.c")
file(GLOB SRCS_SENSOR_FUSION "../drivers/sensor_fusion/*.c")

idf_component_register(SRCS "firmware_main.c" "control_main.c" "mov_calculation.c" "telemetry.c" ${SRCS_AS5600} ${SRCS_PLATFORM} ${SRCS_BLDC_PWM} ${SRCS_PID_LIB} ${SRCS_SENSOR_FUSION}
                       INCLUDE_DIRS "." "../sensors/AS5600_HAL_Library/include" "../platform/include"
                       "../drivers/bldc_pwm/include" "../drivers/pid_lib/include" "../drivers/sensor_fusion/include"
                        "./include"
                        
                        REQUIRES driver freertos esp_timer nvs_flash esp_adc esp_wifi esp_netif
                    )
